module_12/main/deploy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: "nginx"
  name: httpserver
  namespace: default
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpserver
                port:
                  number: 80
  tls:
    - hosts:
        - www.example.com
      secretName: example-tls
